# quant_simulator

./: .gitignore  README.md  data.db  pytest.ini  requirements.txt  setup_cron.sh  tickers.yml
docs/: cli_usage.md  configuration.md
models/: model_20250705.pkl
scripts/: run_ingest_and_train.sh  run_signal_and_execute.sh
src/: cli.py  config.py  logging.py  run.py
src/backtest/: cli.py  engine.py  walkforward.py  walkforward_v2.py
src/crisis/: __init__.py  detector.py
src/dashboard/: __init__.py  generator.py
src/exec/: alpaca_client.py  execute.py  risk.py
src/features/: builder.py
src/ingest/: market_data_client.py  nav_client.py  pelosi_client.py  sqlite_writer.py
src/signal/: generate.py  scheduler.py
src/train/: train.py
src/universe/: dynamic.py  (+3 more)
swing/: .env.example  __init__.py  main.py  pyproject.toml  requirements.txt
swing/backtest/: __init__.py  backtester.py
swing/config/: __init__.py  settings.py
swing/data/: __init__.py  cache.py  options_feed.py  stock_feed.py
swing/execution/: __init__.py  alpaca_api.py
swing/monitoring/: __init__.py  alerts.py  trade_monitor.py
swing/risk/: __init__.py  position_manager.py
swing/signals/: __init__.py  options_flow_strategy.py
swing/tests/: __init__.py  test_options_feed.py  test_risk.py  test_signals.py
tests/: backtest_smoke_test.py  execution_dry_run.py  feature_engineering_dry_run.py  ingestion_dry_run.py  signal_generation_dry_run.py  test_cli.py  test_config.py  test_dynamic_universe.py  test_merge_universe.py  test_rebalance.py  test_universe_loader.py  training_dry_run.py
